<resources>
    <string name="app_name">Quotess</string>
    <string name="not_a_member_register">Not a member? Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="stars_shine">Stars shine</string>
    <string name="inspire_me">Inspire Me</string>
    <string name="instruct">We Just need your registered Email To send you Password reset Instructions.</string>
    <string name="reset_password">Reset Password</string>
    <string name="go_back">|Go Back</string>
    <string name="am_in">Already registered. Log me In!</string>
    <string name="forgoten_password">Forgoten Password</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome</string>
    <string name="Enter">Enter Email Address</string>
    <string name="Pass" >Enter Password</string>
    <string name="fail">Failed to send reset email!</string>
    <string name="confirm">We have sent you instructions to reset your password!</string>
    <string name="em">Enter your registered email id</string>
</resources>
